<resources>
    <string-array name="Other_functions_spinner_array_original">
        <item>@string/Other_functions</item>
        <item>@string/Change_background</item>
        <item>@string/Set_default_dictionary</item>
        <item>@string/Memorize_word_shortcut</item>
        <item>@string/Show_tutorial</item>
        <item>@string/Go_to_dictionary_almighty_homepage</item>
        <item>@string/Go_to_dictionary_almighty_blog</item>
        <item>@string/Go_to_dictionary_almighty_facebook</item>
        <item>@string/Sponsor_the_developer</item>
        
        
        
        
        

    </string-array>
    <string-array name="Other_functions_spinner_array_simplified">
        <item>@string/Other_functions</item>
        <item>@string/Change_background</item>
        <item>@string/Set_default_dictionary</item>
        <item>@string/Memorize_word_shortcut</item>
        <item>@string/Show_tutorial</item>
        <item>@string/Go_to_dictionary_almighty_homepage</item>
        <item>@string/Go_to_dictionary_almighty_blog</item>
        <item>@string/Go_to_dictionary_almighty_facebook</item>
        <item>@string/Sponsor_the_developer</item>
        
        
        
        

    </string-array>
    <string-array name="Speech_recognition_spinner_array_original">
        <item>@string/Speech_input</item>
        <item>@string/Chinese_speech</item>
        <item>@string/English_speech</item>
        <item>@string/Simplified_chinese_speech</item>
        <item>@string/Japanese_speech</item>
        <item>@string/Korean_speech</item>
        <item>@string/Spanish_speech</item>
        <item>@string/Speech_recognition_plus_Auto_Translation</item>
        <item>@string/CH_speech_auto_translate_to_EN</item>
        <item>@string/CH_speech_auto_translate_to_JP</item>
        <item>@string/CH_speech_auto_translate_to_KR</item>
        <item>@string/CH_speech_auto_translate_to_ES</item>
        <item>@string/EN_speech_auto_translate_to_CH</item>
        <item>@string/JP_speech_auto_translate_to_CH</item>
        <item>@string/KR_speech_auto_translate_to_CH</item>
        <item>@string/ES_speech_auto_translate_to_CH</item>
    </string-array>
    <string-array name="Speech_recognition_spinner_array_simplified">
        <item>@string/Speech_recognition_plus_Auto_Translation</item>
        <item>@string/CH_speech_auto_translate_to_EN</item>
        <item>@string/CH_speech_auto_translate_to_JP</item>
        <item>@string/EN_speech_auto_translate_to_CH</item>
        <item>@string/JP_speech_auto_translate_to_CH</item>
    </string-array>
    <string-array name="default_dictionary_list_original">
        <item>@string/Yahoo_Dictionary</item>
        <item>@string/National_Academy_for_Educational_Research</item>
        <item>@string/Dict_site</item>
        <item>@string/Fast_dict</item>
        <item>@string/Dict_dot_cn</item>
        <item>@string/Google_dictionary</item>
        <item>@string/VoiceTube</item>
        <item>@string/Cambridge_EN_CH</item>
        <item>@string/Word_reference_en_to_ch</item>
        <item>@string/Word_reference_ch_to_en</item>
        <item>@string/Merriam_Webster</item>
        <item>@string/Macmillan_dictionary</item>
        <item>@string/Collins</item>
        <item>@string/Oxford</item>
        <item>@string/Vocabulary</item>
        <item>@string/Dictionary</item>
        <item>@string/The_Free_Dictionary</item>
        <item>@string/Fine_dictionary</item>
        <item>@string/Your_Dictionary</item>
        <item>@string/Longman_Dictionary</item>
        <item>@string/American_heritage_dictionary</item>
        <item>@string/Word_sense</item>
        <item>@string/WordWeb_dictionary</item>
        <item>@string/Wordnik</item>
        <item>@string/Wiki_Dictionary</item>
        <item>@string/Business_Dictionary</item>
        <item>@string/Idioms_and_slang</item>
        <item>@string/Slang</item>
        <item>@string/The_online_slang_dictionary</item>
        <item>@string/Idioms_4_you</item>
        <item>@string/Greens_dictionary_of_slang</item>
        <item>@string/The_idioms</item>
        <item>@string/Etymonline</item>
        <item>@string/TechDico</item>
        <item>@string/BioMedical_dictionary</item>
        <item>@string/Buddhism_dictionary</item>
        <item>@string/Is_plural_dictionary</item>
        <item>@string/Lingo_help_prepositions</item>
        <item>@string/Power_thesaurus_synonym</item>
        <item>@string/Power_thesaurus_antonym</item>
        <item>@string/Word_Hippo</item>
        <item>@string/Onelook</item>
        <item>@string/Ozdic_collocation_dictionary</item>
        <item>@string/Stack_exchange_English_learners</item>
        <item>@string/Stack_exchange_English_language_usage</item>

        <item>@string/Weblio_JP</item>
        <item>@string/Weblio_CN</item>
        <item>@string/Weblio_EN</item>
        <item>@string/Weblio_Synonym</item>
        <item>@string/Tangorin_Word</item>
        <item>@string/Tangorin_Kanji</item>
        <item>@string/Tangorin_Names</item>
        <item>@string/Tangorin_Sentence</item>
        <item>@string/DA_JP_TW_Dictionary</item>
        <item>@string/DA_TW_JP_Dictionary</item>
        <item>@string/Goo</item>
        
        <item>@string/Kotoba_Bank</item>
        <item>@string/J_Logos</item>
        <item>@string/Eijirou</item>
        <item>@string/How_do_you_say_this_in_English</item>
        <item>@string/Jisho</item>
        <item>@string/Cambridge_JP_EN</item>
        <item>@string/Cambridge_EN_JP</item>
        <item>@string/WWWJDIC_jp_en</item>
        <item>@string/WWWJDIC_en_jp</item>
        <item>@string/Word_reference_en_to_jp</item>
        <item>@string/Word_reference_jp_to_en</item>
        <item>@string/Romaji_desu_enjp_jpen_dictionary</item>
        <item>@string/Romaji_desu_kanji_dictionary</item>
        <item>@string/Japan_dict</item>
        <item>@string/Japan_dict_kanji_dictionary</item>
        <item>@string/Japanese_name_dictionary</item>
        <item>@string/Stack_exchange_Japanese_language</item>
        <item>@string/Metapedia</item>

        
        
        
        
        
        
        
        
        
        <item>@string/Google_translate_to_CHTW</item>
        <item>@string/Google_translate_to_CHCN</item>
        <item>@string/Google_translate_to_EN</item>
        <item>@string/Google_translate_to_JP</item>
        <item>@string/Google_translate_to_KR</item>
        <item>@string/Google_translate_to_SP</item>
        <item>@string/Google_Image</item>

        <item>@string/Ludwig</item>
        <item>@string/Search_sentences_dot_com</item>
        <item>@string/Your_Dictionary_Example_Sentences</item>
        <item>@string/YouGlish</item>
        <item>@string/Word_Cool_EN_CH</item>
        <item>@string/Word_Cool_EN_JP</item>
        <item>@string/Word_Cool_JP_CH</item>
        <item>@string/Linguee_CH_EN</item>
        <item>@string/Linguee_JP_EN</item>

        <item>@string/Wikipedia_TW</item>
        <item>@string/Wikipedia_EN</item>
        <item>@string/English_Encyclopedia</item>
        <item>@string/Forvo</item>
        <item>@string/Difference_between_dot_net</item>
        <item>@string/Net_Speak</item>
        <item>@string/Just_the_word</item>
        <item>@string/Yomikata</item>
        <item>@string/Chigai</item>
        <item>@string/OJAD</item>
    </string-array>
    <string-array name="default_dictionary_list_simplified">
        <item>@string/Yahoo_Dictionary</item>
        <item>@string/National_Academy_for_Educational_Research</item>
        <item>@string/Dict_site</item>
        <item>@string/Fast_dict</item>
        <item>@string/Google_dictionary</item>
        <item>@string/VoiceTube</item>
        <item>@string/Cambridge_EN_CH</item>

        <item>@string/Weblio_JP</item>
        <item>@string/Weblio_CN</item>
        <item>@string/DA_JP_TW_Dictionary</item>
        <item>@string/DA_TW_JP_Dictionary</item>

        <item>@string/Google_translate_to_CHTW</item>
        <item>@string/Google_translate_to_CHCN</item>
        <item>@string/Google_Image</item>

    </string-array>
    <string-array name="preset_notification_timings">
        <item>@string/In_an_hour_halfDay_1day_2days_week_month_6months_year</item>
        <item>@string/In_1day_week_month</item>
        <item>@string/In_1_hour</item>
        <item>@string/In_half_a_day</item>
        <item>@string/In_1_day</item>
        <item>@string/In_2_days</item>
        <item>@string/In_1_week</item>
        <item>@string/In_1_month</item>
        <item>@string/In_6_months</item>
        <item>@string/In_1_year</item>

    </string-array>
    <string-array name="quick_search_combo_search_or_google_translate">
        <item>@string/Quick_search</item>
        <item>@string/Combo_search</item>
        <item>@string/Google_translate</item>

    </string-array>
    <string name="Yahoo_Dictionary">Yahoo Dictionary</string>
    <string name="Cambridge_EN_CH">Cambridge EN-CH</string>
    <string name="Merriam_Webster">Merriam Webster</string>
    <string name="Collins">Collins</string>
    <string name="Oxford">Oxford</string>
    <string name="Vocabulary">Vocabulary</string>
    <string name="Dictionary">Dictionary</string>
    <string name="The_Free_Dictionary">The Free Dictionary</string>
    <string name="Your_Dictionary">Your Dictionary</string>
    <string name="Longman_Dictionary">Longman Dictionary</string>
    <string name="Dict_site">Dict.site</string>
    <string name="Business_Dictionary">Business Dictionary</string>
    <string name="National_Academy_for_Educational_Research">National Academy for Educational Research</string>
    <string name="Slang">俚語網</string>
    <string name="Weblio_JP">Weblio JP</string>
    <string name="Weblio_CN">Weblio CN</string>
    <string name="Weblio_EN">Weblio EN</string>
    <string name="Sanseido">三省堂</string>
    <string name="Eijirou">英辞郎</string>
    <string name="How_do_you_say_this_in_English">英語でなんて言うの？</string>
    <string name="Word_Plus_Chinese">Word + 中文</string>
    <string name="Word_Plus_English1">Word + 英文</string>
    <string name="Word_Plus_English2">Word + 英語</string>
    <string name="Word_Plus_Translation">Word + 翻譯</string>
    <string name="Word_Plus_Japanese1">Word + 日文</string>
    <string name="Word_Plus_Japanese2">Word + 日語</string>
    <string name="Word_Plus_Japanese3">Word + 日本語</string>
    <string name="Word_Plus_Meaning1">Word + 意思</string>
    <string name="Word_Plus_Meaning2">Word + meaning</string>
    <string name="Ludwig">Ludwig</string>
    <string name="Your_Dictionary_Example_Sentences">Your Dictionary Example Sentences</string>
    <string name="Word_Cool_EN_CH">Word Cool EN_CH</string>
    <string name="Word_Cool_EN_JP">Word Cool EN_JP</string>
    <string name="Word_Cool_JP_CH">Word Cool JP_CH</string>
    <string name="Wikipedia_EN">Wikipedia EN</string>
    <string name="Forvo">Forvo</string>
    <string name="Wiki_Diff">Wiki Diff</string>
    <string name="Word_Input">Input your search term here</string>
    <string name="Select_EN_Dictionary_Provider">Search  English Dictionaries</string>
    <string name="Select_JP_Dictionary_Provider">Search Japanese  Dictionaries</string>
    <string name="Select_Google_Word_Searcher">Ask Google</string>
    <string name="Select_Sentence_Searcher">Search Example Sentences</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="Sign_out">Sign out user</string>
    <string name="Disconnect">Disconnect</string>
    <string name="You_are_not_signed_in">You\'re not signed in</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="User_sign_in_status">User Sing-in Status</string>
    <string name="Delete_user">Delete User</string>
    <string name="Database_UID">UID:</string>
    <string name="You_can_tap_return_to_the_top_page">Hint: You can tap the back key to return to the top page</string>
</resources>